<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="dam.a42346.coolweatherapp.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/winxp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/weatherImage"
            android:layout_width="200dp"
            android:layout_height="400dp"
            android:contentDescription="@string/weather_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clear_day" />

        <TableLayout
            android:id="@+id/weather"
            android:layout_width="409dp"
            android:layout_height="329dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherImage">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/latitudeKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textColor="@color/white" />

                <!-- -->
                <!-- -->
                <EditText
                    android:id="@+id/latitudeValue"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="numberDecimal|numberSigned"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:text="@={mainViewModel.latitudeInput}"
                    android:tag="latitude"
                    android:hint="@{mainViewModel.lisbon_lat}"
                    android:autofillHints="0" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/longitudeKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/longitudeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="numberDecimal|numberSigned"
                    android:minHeight="48dp"
                    android:tag="latitude"
                    android:text="@={mainViewModel.longitudeInput}"
                    android:hint="@{mainViewModel.lisbon_lon}"
                    android:autofillHints="0"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/pressureKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/pressureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@string/default_val"
                    android:textColor="@color/white" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/dirKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dir"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/dirValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@string/default_val"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/speedKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/speedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@string/default_val"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tempKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tempValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@string/default_val"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/timeKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/timeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@string/default_val"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow android:gravity="center">
                <Button
                    android:id="@+id/upd_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="@{ ()-> mainViewModel.updateWeather() }"
                    android:text="@string/upd" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
